<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1" >

    <TextView
        android:id="@+id/editheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/AddReminder"
        android:textColor="#000000" />
    
    <TextView 
        android:id="@+id/editenter_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desc"
        android:layout_below="@id/editheading"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        />
    
    <EditText 
        android:id="@+id/editdesc_et"
        android:hint="@string/DescHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/editenter_desc"
        android:layout_alignBaseline="@id/editenter_desc"
        />
    
    <TextView 
        android:id="@+id/editselect_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_below="@id/editenter_desc"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        />
    
    <Spinner 
        android:id="@+id/editcategory_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editselect_category"
        
        />
    
    <TextView 
        android:id="@+id/editselect_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:layout_below="@id/editcategory_spinner"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#000000"
        />
    
    <Spinner 
        android:id="@+id/edittype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editselect_type"
        
        />
    
    <TextView 
        android:id="@+id/editselect_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemindOn"
        android:textSize="18sp"
        android:layout_below="@id/edittype_spinner"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />
    
    <DatePicker 
        android:id="@+id/editdate_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editselect_date"
        android:layout_marginTop="10dp"
        />
    
    <TextView 
        android:id="@+id/editselect_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemindAt"
        android:textSize="18sp"
        android:layout_below="@id/editdate_picker"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />
    
    <TimePicker 
        android:id="@+id/edittime_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editselect_time"
        android:layout_marginTop="10dp"    
        android:layout_marginBottom="20dp"  
        />
    
    <Button 
        android:id="@+id/editsubmit_button"
        android:layout_width="100dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittime_picker"
        android:text="@string/SetAlarm"
        
        />
    
    <Button 
        android:id="@+id/editreset_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@id/editsubmit_button"
        android:textSize="18sp"
        android:text="@string/Reset"
        android:layout_below="@id/edittime_picker"
        android:layout_marginLeft="30dp"
        
        />
    
</RelativeLayout>

</ScrollView>