<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1" >
    
    <LinearLayout
        
        android:id="@+id/EdDelViewLent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentRight="true" >

        <Button 
        android:id="@+id/edit_button"
        android:layout_width="0dp"
        android:textSize="18sp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        />

        <Button 
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:textSize="18sp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/viewlentheading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EdDelViewLent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/RememberLent" />
    
    <TextView 
        android:id="@+id/viewlentdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desc"
        android:layout_below="@id/viewlentheading1"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        />
    
    <TextView 
        android:id="@+id/viewdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/viewlentdesc"
        android:textColor="#000000"
        android:layout_alignBaseline="@id/viewlentdesc"
        />
    
    <TextView 
        android:id="@+id/viewlentcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_below="@id/viewlentdesc"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    
    <TextView 
        android:id="@+id/viewcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/viewlentcategory"
        android:textColor="#000000"
        android:layout_alignBaseline="@id/viewlentcategory"
        />
    
    <TextView
        android:id="@+id/viewlentheading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewlentcategory"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/Lent" />
    
    <TextView 
        android:id="@+id/viewdatelent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/On"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@id/viewlentheading2"
        android:layout_marginTop="10dp"
        />
    
    <TextView 
        android:id="@+id/viewdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/viewdatelent"
        android:textColor="#000000"
        android:layout_alignBaseline="@id/viewdatelent"
        />
    
    <TextView 
        android:id="@+id/viewtimelent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/At"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@id/viewdatelent"
        android:layout_marginTop="10dp"
        />
    
    <TextView 
        android:id="@+id/viewtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:layout_toRightOf="@id/viewtimelent"
        android:layout_alignBaseline="@id/viewtimelent"
        />
    
    <TextView
        android:id="@+id/viewlentheading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewtimelent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="@string/Take" />
    
    <TextView 
        android:id="@+id/viewdateofret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/On"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@id/viewlentheading3"
        android:layout_marginTop="10dp"
        />
    
    <TextView 
        android:id="@+id/viewdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/viewdateofret"
        android:layout_alignBaseline="@id/viewdateofret"
        />
    
    <TextView 
        android:id="@+id/viewtimeofret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/At"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_below="@id/viewdateofret"
        android:layout_marginTop="10dp"
        />
    
    <TextView 
        android:id="@+id/viewtime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:layout_toRightOf="@id/viewtimeofret"
        android:layout_alignBaseline="@id/viewtimeofret"
        />
    

</RelativeLayout>
