<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1" >

    <LinearLayout
        android:id="@+id/AddCategoriesViewBorrowed"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/addreminder_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/AddAReminder"
            android:textSize="18sp" />

        <Button
            android:id="@+id/viewcategories_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Categories"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/borrowed_listview"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/AddCategoriesViewBorrowed"
        android:background="@color/blue" >
    </ListView>

    <Button
        android:id="@+id/viewlentbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/borrowed_listview"
        android:layout_marginTop="20dp"
        android:text="@string/ViewLent"
        android:textSize="18sp" />

</RelativeLayout>